# lamber

./: .gitignore  DESIGN.md  demo_logic.rs  gen-icon.ps1  package-lock.json  package.json  project_state.md  rebuild_template.py  run_tauri.bat  效益分析表 .xlsx  立项签批表.docx  算账表解析.xlsx
ESOP附件/: .~024版】ICT项目售前方案会审纪要模板-重庆黄越科技有限公司厂房信息化技术服务项目.doc  .~【2024版】ICT项目售前预算表模板-重庆黄越科技有限公司厂房信息化技术服务项目.xlsx  2.ICT项目效益评估表（2025版)-- 重庆黄越科技有限公司厂房信息化技术服务项目 1.xlsx  ICT项目需求导入-重庆黄越科技有限公司厂房信息化技术服务项目.docx  【2024版】ICT项目售前方案会审纪要模板-重庆黄越科技有限公司厂房信息化技术服务项目.doc  【2024版】ICT项目售前预算表模板-重庆黄越科技有限公司厂房信息化技术服务项目.xlsx  商务条款.docx  技术条款.doc  重庆黄越科技有限公司厂房信息化技术服务项目-立项签批表.docx
src/: index.html
src-tauri/: Cargo.toml  log.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: benefit.rs  docfill.rs  main.rs
一键生成全生命周期结果/: 【2024版】ICT项目售前方案会审纪要-易诚国际高楼消防监测项目_变量版.docx
项目全生命周期文件模版/: 【2024版】ICT项目售前方案会审纪要模板_变量版.docx  【2024版】ICT项目售前预算表模板.xlsx  【2025版】ICT项目立项决策纪要模板.docx  【2025版】ICT项目立项签批表（仅适用50万以下项目）模板.docx  【2025版】关于XXXXX项目合作与立项的决策汇报.pptx
项目全生命周期文件模版/_originals/: 【2024版】ICT项目售前方案会审纪要模板.docx
