[package]
name = "benefit-calculator"
version = "0.1.0"
description = "A Tauri App for Project Benefit Calculation"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.34"
tauri-plugin-dialog = "2.7.0"
calamine = "0.34.0"
rust_xlsxwriter = "0.94.0"
zip = "8.5.1"
regex = "1.12.3"
chrono = "0.4"
docx-template = "0.2.7"
umya-spreadsheet = "2.3.3"
base64 = "0.22.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
